--- a/WaCollaborative/WaCollaborative.Frontend/Shared/NavMenu.razor
+++ b/WaCollaborative/WaCollaborative.Frontend/Shared/NavMenu.razor
@@ -18,7 +18,12 @@
             <NavLink class="nav-link" href="/countries">
                 <span class="oi oi-globe" aria-hidden="true"></span> Paises
             </NavLink>
-        </div>       
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/measurementUnits">
+                <span class="oi oi-beaker" aria-hidden="true"></span> Unidades de Medida
+            </NavLink>
+        </div>
     </nav>
 </div>
 
