--- a/WaCollaborative/WaCollaborative.Frontend/Pages/MeasurementUnits/MeasurementUnitsIndex.razor
+++ b/WaCollaborative/WaCollaborative.Frontend/Pages/MeasurementUnits/MeasurementUnitsIndex.razor
@@ -2,11 +2,11 @@
 @inject IRepository repository
 @inject SweetAlertService sweetAlertService
 
-<h3>Paises</h3>
+<h3>Unidades de Medida</h3>
 
 <GenericList List="measurementUnits">
     <NoRecords>
-        <p>Aun no hay paises registrados.</p>
+        <p>Aun no hay unidade de medida registradas.</p>
     </NoRecords>
     <Body>
         <a href="/measurementUnits/create" class="btn btn-primary">Nueva Unidad de Medida</a>
