--- a/WaCollaborative/WaCollaborative.Frontend/Shared/NavMenu.razor
+++ b/WaCollaborative/WaCollaborative.Frontend/Shared/NavMenu.razor
@@ -24,6 +24,11 @@
                 <span class="oi oi-beaker" aria-hidden="true"></span> Unidades de Medida
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/status">
+                <span class="oi oi-task" aria-hidden="true"></span> Estados
+            </NavLink>
+        </div>
     </nav>
 </div>
 
