--- a/WaCollaborative/WaCollaborative.Frontend/Pages/MeasurementUnits/MeasurementUnitsIndex.razor
+++ b/WaCollaborative/WaCollaborative.Frontend/Pages/MeasurementUnits/MeasurementUnitsIndex.razor
@@ -4,6 +4,10 @@
 
 <h3>Unidades de Medida</h3>
 
+<Pagination CurrentPage="currentPage"
+            TotalPages="totalPages"
+            SelectedPage="SelectedPageAsync" />
+
 <GenericList List="measurementUnits">
     <NoRecords>
         <p>Aun no hay unidade de medida registradas.</p>
@@ -36,24 +40,66 @@
 @code {
 
     private List<MeasurementUnit>? measurementUnits;
+    private int currentPage = 1;
+    private int totalPages;
 
     protected override async Task OnInitializedAsync()
     {
         await LoadAsync();
     }
 
-    private async Task LoadAsync()
+    private async Task SelectedPageAsync(int page)
     {
-        var response = await repository.GetAsync<List<MeasurementUnit>>("api/measurementUnits");
+        currentPage = page;
+        await LoadAsync(page);
+    }
+
+    private async Task LoadAsync(int page = 1)
+    {
+        var ok = await LoadListAsync(page);
+        if (ok)
+        {
+            await LoadPagesAsync();
+        }
+    }
+
+    private async Task<bool> LoadListAsync(int page)
+    {
+        var response = await repository.GetAsync<List<MeasurementUnit>>($"api/measurementUnits?page={page}");
+        if (response.Error)
+        {
+            var message = await response.GetErrorMessageAsync();
+            await sweetAlertService.FireAsync("Error", message, SweetAlertIcon.Error);
+            return false;
+        }
+        measurementUnits = response.Response;
+        return true;
+    }
+
+    private async Task LoadPagesAsync()
+    {
+        var response = await repository.GetAsync<int>("api/measurementUnits/totalPages");
         if (response.Error)
         {
             var message = await response.GetErrorMessageAsync();
             await sweetAlertService.FireAsync("Error", message, SweetAlertIcon.Error);
             return;
         }
-
-        measurementUnits = response.Response;
+        totalPages = response.Response;
     }
+
+    // private async Task LoadAsync()
+    // {
+    //     var response = await repository.GetAsync<List<MeasurementUnit>>("api/measurementUnits");
+    //     if (response.Error)
+    //     {
+    //         var message = await response.GetErrorMessageAsync();
+    //         await sweetAlertService.FireAsync("Error", message, SweetAlertIcon.Error);
+    //         return;
+    //     }
+
+    //     measurementUnits = response.Response;
+    // }
 
     private async Task DeleteAsync(MeasurementUnit measurementUnit)
     {
