--- a/WaCollaborative/WaCollaborative.Frontend/Pages/States/StateDetails.razor
+++ b/WaCollaborative/WaCollaborative.Frontend/Pages/States/StateDetails.razor
@@ -15,7 +15,12 @@ else
         <a class="btn btn-success" href="/countries/details/@state.CountryId">Regresar</a>
     </div>
 
-    <GenericList List="state.Cities!.ToList()">
+    <Pagination CurrentPage="currentPage"
+                TotalPages="totalPages"
+                SelectedPage="SelectedPageAsync" />
+
+
+    <GenericList List="cities!">
         <Body>
             <table class="table table-striped">
                 <thead>
@@ -25,7 +30,7 @@ else
                     </tr>
                 </thead>
                 <tbody>
-                    @foreach (var city in state.Cities!.ToList())
+                    @foreach (var city in cities!)
                     {
                         <tr>
                             <td>
@@ -45,6 +50,10 @@ else
 
 @code {
     private State? state;
+    private List<City>? cities;
+    private int currentPage = 1;
+    private int totalPages;
+
 
     [Parameter]
     public int StateId { get; set; }
@@ -53,24 +62,70 @@ else
         await LoadAsync();
     }
 
-    private async Task LoadAsync()
+    private async Task SelectedPageAsync(int page)
     {
-        var responseHttp = await repository.GetAsync<State>($"/api/states/{StateId}");
-        if (responseHttp.Error)
-        {
-            if (responseHttp.HttpResponseMessage.StatusCode == HttpStatusCode.NotFound)
-            {
-                navigationManager.NavigateTo("/countries");
-                return;
-            }
+        currentPage = page;
+        await LoadAsync(page);
+    }
 
-            var message = await responseHttp.GetErrorMessageAsync();
+    private async Task LoadAsync(int page = 1)
+    {
+        var ok = await LoadStateAsync();
+        if (ok)
+        {
+            ok = await LoadCitiesAsync(page);
+            if (ok)
+            {
+                await LoadPagesAsync();
+            }
+        }
+    }
+
+    private async Task LoadPagesAsync()
+    {
+        var response = await repository.GetAsync<int>($"api/cities/totalPages?id={StateId}");
+        if (response.Error)
+        {
+            var message = await response.GetErrorMessageAsync();
             await sweetAlertService.FireAsync("Error", message, SweetAlertIcon.Error);
             return;
         }
-
-        state = responseHttp.Response;
+        totalPages = response.Response;
     }
+
+
+    private async Task<bool> LoadCitiesAsync(int page)
+    {
+        var response = await repository.GetAsync<List<City>>($"api/cities?id={StateId}&page={page}");
+        if (response.Error)
+        {
+            var message = await response.GetErrorMessageAsync();
+            await sweetAlertService.FireAsync("Error", message, SweetAlertIcon.Error);
+            return false;
+        }
+        cities = response.Response;
+        return true;
+    }
+
+    private async Task<bool> LoadStateAsync()
+    {
+        var response = await repository.GetAsync<State>($"api/states/{StateId}");
+        if (response.Error)
+        {
+            if (response.HttpResponseMessage.StatusCode == HttpStatusCode.NotFound)
+            {
+                navigationManager.NavigateTo("/countries");
+                return false;
+            }
+
+            var message = await response.GetErrorMessageAsync();
+            await sweetAlertService.FireAsync("Error", message, SweetAlertIcon.Error);
+            return false;
+        }
+        state = response.Response;
+        return true;
+    }
+
 
     private async Task DeleteAsync(int CityId)
     {
