adapts button design

--- a/WaCollaborative/WaCollaborative.Frontend/Pages/Countries/CountriesIndex.razor
+++ b/WaCollaborative/WaCollaborative.Frontend/Pages/Countries/CountriesIndex.razor
@@ -4,6 +4,10 @@
 
 <h3>Paises</h3>
 
+<div class="mb-2">
+    <a class="btn btn-primary btn-sm" href="/countries/create">Nuevo País</a>
+</div>
+
 <Pagination CurrentPage="currentPage"
             TotalPages="totalPages"
             SelectedPage="SelectedPageAsync" />
@@ -14,7 +18,7 @@
         <p>Aun no hay paises registrados.</p>
     </NoRecords>
     <Body>
-        <a href="/countries/create" class="btn btn-primary">Nuevo País</a>
+        
         <table class="table table-striped">
             <thead>
                 <tr>
