--- a/WaCollaborative/WaCollaborative.Frontend/Pages/MeasurementUnits/MeasurementUnitsIndex.razor
+++ b/WaCollaborative/WaCollaborative.Frontend/Pages/MeasurementUnits/MeasurementUnitsIndex.razor
@@ -4,6 +4,10 @@
 
 <h3>Unidades de Medida</h3>
 
+<div class="mb-2">
+    <a class="btn btn-primary btn-sm" href="/measurementUnits/create">Nueva Unidad de Medida</a>
+</div>
+
 <Pagination CurrentPage="currentPage"
             TotalPages="totalPages"
             SelectedPage="SelectedPageAsync" />
@@ -13,7 +17,6 @@
         <p>Aun no hay unidade de medida registradas.</p>
     </NoRecords>
     <Body>
-        <a href="/measurementUnits/create" class="btn btn-primary">Nueva Unidad de Medida</a>
         <table class="table table-striped">
             <thead>
                 <tr>
