--- a/WaCollaborative/WaCollaborative.Frontend/Pages/Countries/CountryDetail.razor
+++ b/WaCollaborative/WaCollaborative.Frontend/Pages/Countries/CountryDetail.razor
@@ -10,14 +10,13 @@
 {
     <h3>@country.Name</h3>
     <div class="mb-2">
-        <a class="btn btn-primary" href="/states/create/@country.Id">Nuevo Estado/Departamento</a>
-        <a class="btn btn-success" href="/countries">Regresar</a>
+        <a class="btn btn-primary btn-sm" href="/states/create/@country.Id">Nuevo Estado/Departamento</a>
+        <a class="btn btn-success btn-sm" href="/countries">Regresar</a>
     </div>
 
     <Pagination CurrentPage="currentPage"
                 TotalPages="totalPages"
                 SelectedPage="SelectedPageAsync" />
-
 
     <GenericList List="states!">
         <Body>
@@ -40,8 +39,8 @@
                                 @state.CitiesNumber
                             </td>
                             <td>
-                                <a class="btn btn-warning" href="/states/edit/@state.Id">Editar</a>
-                                <button class="btn btn-danger" @onclick=@(() => DeleteAsync(state.Id))>Borrar</button>
+                                <a class="btn btn-warning btn-sm" href="/states/edit/@state.Id">Editar</a>
+                                <button class="btn btn-danger btn-sm" @onclick=@(() => DeleteAsync(state.Id))>Borrar</button>
                             </td>
                         </tr>
                     }
