--- a/WaCollaborative/WaCollaborative.Frontend/Shared/NavMenu.razor
+++ b/WaCollaborative/WaCollaborative.Frontend/Shared/NavMenu.razor
@@ -25,6 +25,16 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/categories">
+                <span class="oi oi-task" aria-hidden="true"></span> Categorias
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/segments">
+                <span class="oi oi-task" aria-hidden="true"></span> Segmentos
+            </NavLink>
+        </div>        
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="/status">
                 <span class="oi oi-task" aria-hidden="true"></span> Estados
             </NavLink>
