--- a/WaCollaborative/WaCollaborative.Frontend/Shared/NavMenu.razor
+++ b/WaCollaborative/WaCollaborative.Frontend/Shared/NavMenu.razor
@@ -26,17 +26,27 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="/categories">
-                <span class="oi oi-task" aria-hidden="true"></span> Categorias
+                <span class="oi oi-briefcase" aria-hidden="true"></span> Categorias
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="/segments">
-                <span class="oi oi-task" aria-hidden="true"></span> Segmentos
+                <span class="oi oi-aperture" aria-hidden="true"></span> Segmentos
             </NavLink>
         </div>        
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="/status">
-                <span class="oi oi-task" aria-hidden="true"></span> Estados
+                <span class="oi oi-ellipses" aria-hidden="true"></span> Estados
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/eventtypes">
+                <span class="oi oi-eject" aria-hidden="true"></span> Tipos de Evento
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/distributionchannels">
+                <span class="oi oi-map-marker" aria-hidden="true"></span> Canales de Distribución
             </NavLink>
         </div>
     </nav>
