--- a/WaCollaborative/WaCollaborative.Frontend/_Imports.razor
+++ b/WaCollaborative/WaCollaborative.Frontend/_Imports.razor
@@ -12,3 +12,7 @@
 @using WaCollaborative.Frontend.Repositories
 @using CurrieTechnologies.Razor.SweetAlert2
 @using System.Net
+@using Microsoft.AspNetCore.Components.Authorization
+@using WaCollaborative.Frontend.Auth;
+@using WaCollaborative.Shared.DTOs;
+@using WaCollaborative.Shared.Enums;
