--- a/WaCollaborative/WaCollaborative.Frontend/Pages/Auth/Register.razor
+++ b/WaCollaborative/WaCollaborative.Frontend/Pages/Auth/Register.razor
@@ -4,10 +4,19 @@
 @inject NavigationManager navigationManager
 @inject ILoginService loginService
 
-<h3>Registrar Nuevo Usuario</h3>
 
 <EditForm Model="userDTO" OnValidSubmit="CreteUserAsync">
     <DataAnnotationsValidator />
+
+    <div class="card">
+        <div class="card-header">
+            <span>
+                <i class="oi oi-person" /> Registrar Nuevo  Usuario
+                <button class="btn btn-sm btn-primary float-end" type="submit"><i class="oi oi-check" /> Registrar</button>
+            </span>
+        </div>
+        <div class="card-body">
+
 
     <div class="row">
         <div class="col-6">
@@ -56,12 +65,52 @@
         </div>
         <div class="col-6">
             <div class="mb-3">
+                <label>País:</label>
+                <div>
+                    <select class="form-select" @onchange="CountryChangedAsync">
+                        <option value="0">-- Seleccione un país --</option>
+                        @if (countries is not null)
+                        {
+                            @foreach (var country in countries)
+                            {
+                                <option value="@country.Id">@country.Name</option>
+                            }
+                        }
+                    </select>
+                </div>
+            </div>
+            <div class="mb-3">
+                <label>Estado/Departamento:</label>
+                <div>
+                    <select class="form-select" @onchange="StateChangedAsync">
+                        <option value="0">-- Seleccione un estado/departamento --</option>
+                        @if (states is not null)
+                        {
+                            @foreach (var state in states)
+                            {
+                                <option value="@state.Id">@state.Name</option>
+                            }
+                        }
+                    </select>
+                </div>
+            </div>
+            <div class="mb-3">
                 <label>Ciudad:</label>
                 <div>
-                    <InputNumber class="form-control" @bind-Value="@userDTO.CityId" />
+                    <select class="form-select" @bind="userDTO.CityId">
+                        <option value="0">-- Seleccione una ciudad --</option>
+                        @if (cities is not null)
+                        {
+                            @foreach (var city in cities)
+                            {
+                                <option value="@city.Id">@city.Name</option>
+                            }
+                        }
+                    </select>
                     <ValidationMessage For="@(() => userDTO.CityId)" />
                 </div>
             </div>
+
             <div class="mb-3">
                 <label>Foto:</label>
                 <div>
@@ -85,11 +134,73 @@
             </div>
         </div>
     </div>
-    <button class="btn btn-primary" type="submit">Registrar</button>
+  </div>
+</div>
+
 </EditForm>
 
 @code {
     private UserDTO userDTO = new();
+    private List<Country>? countries;
+    private List<State>? states;
+    private List<City>? cities;
+
+    protected override async Task OnInitializedAsync()
+    {
+        await LoadCountriesAsync();
+    }
+
+    private async Task CountryChangedAsync(ChangeEventArgs e)
+    {
+        var selectedCountry = Convert.ToInt32(e.Value!);
+        await LoadStatesAsyn(selectedCountry);
+    }
+
+    private async Task StateChangedAsync(ChangeEventArgs e)
+    {
+        var selectedState = Convert.ToInt32(e.Value!);
+        await LoadCitiesAsyn(selectedState);
+    }
+
+    private async Task LoadCountriesAsync()
+    {
+        var responseHttp = await repository.GetAsync<List<Country>>("/api/countries/combo");
+        if (responseHttp.Error)
+        {
+            var message = await responseHttp.GetErrorMessageAsync();
+            await sweetAlertService.FireAsync("Error", message, SweetAlertIcon.Error);
+            return;
+        }
+
+        countries = responseHttp.Response;
+    }
+
+    private async Task LoadStatesAsyn(int countryId)
+    {
+        var responseHttp = await repository.GetAsync<List<State>>($"/api/states/combo/{countryId}");
+        if (responseHttp.Error)
+        {
+            var message = await responseHttp.GetErrorMessageAsync();
+            await sweetAlertService.FireAsync("Error", message, SweetAlertIcon.Error);
+            return;
+        }
+
+        states = responseHttp.Response;
+    }
+
+    private async Task LoadCitiesAsyn(int stateId)
+    {
+        var responseHttp = await repository.GetAsync<List<City>>($"/api/cities/combo/{stateId}");
+        if (responseHttp.Error)
+        {
+            var message = await responseHttp.GetErrorMessageAsync();
+            await sweetAlertService.FireAsync("Error", message, SweetAlertIcon.Error);
+            return;
+        }
+
+        cities = responseHttp.Response;
+    }
+
 
     private async Task CreteUserAsync()
     {
