--- a/WaCollaborative/WaCollaborative.Frontend/Pages/Countries/CountriesIndex.razor
+++ b/WaCollaborative/WaCollaborative.Frontend/Pages/Countries/CountriesIndex.razor
@@ -2,47 +2,53 @@
 @inject IRepository repository
 @inject SweetAlertService sweetAlertService
 
-<h3>Paises</h3>
-
-<div class="mb-2">
-    <a class="btn btn-primary btn-sm" href="/countries/create">Nuevo País</a>
-</div>
-
-<Pagination CurrentPage="currentPage"
+<div class="card">
+    <div class="card-header">
+        <span>
+            <i class="oi oi-globe"></i> Países 
+            <a class="btn btn-sm btn-primary float-end" href="/countries/create"><i class="oi oi-plus"></i> Adicionar País</a>
+        </span>
+    </div>
+    <div class="card-body">
+        <Pagination CurrentPage="currentPage"
             TotalPages="totalPages"
             SelectedPage="SelectedPageAsync" />
-
-
-<GenericList List="countries">
-    <NoRecords>
-        <p>Aun no hay paises registrados.</p>
-    </NoRecords>
-    <Body>
+        <GenericList List="countries">
+            <NoRecords>
+                <p>Aun no hay paises registrados.</p>
+            </NoRecords>
+            <Body>
         
-        <table class="table table-striped">
-            <thead>
-                <tr>
-                    <th>País</th>
-                    <th>Estados / Departamentos</th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var country in countries!)
-                {
-                    <tr>
-                        <td><a href="/countries/details/@country.Id">@country.Name</a></td>
-                        <td>@country.StatesNumber</td>
-                        <td>
-                            <a class="btn btn-warning btn-sm" href="/countries/edit/@country.Id">Editar</a>
-                            <button class="btn btn-danger btn-sm" @onclick=@(() => DeleteAsync(country))>Borrar</button>
-                        </td>
-                    </tr>
-                }
-            </tbody>
-        </table>
-    </Body>
-</GenericList>
+                <table class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th>País</th>
+                            <th>Estados / Departamentos</th>
+                            <th style="width:168px"></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var country in countries!)
+                        {
+                            <tr>
+                                <td><a href="/countries/details/@country.Id">@country.Name</a></td>
+                                <td>@country.StatesNumber</td>
+                                <td>
+                                    <a class="btn btn-warning btn-sm" href="/countries/edit/@country.Id"><i class="oi oi-pencil" /> Editar</a>
+                                    <button class="btn btn-danger btn-sm" @onclick=@(() => DeleteAsync(country))><i class="oi oi-trash" /> Borrar</button>
+                                </td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            </Body>
+        </GenericList>
+    </div>
+</div>
+
+
+
+
 
 @code {
 
