--- a/WaCollaborative/WaCollaborative.Frontend/Pages/Status/StatusIndex.razor
+++ b/WaCollaborative/WaCollaborative.Frontend/Pages/Status/StatusIndex.razor
@@ -1,4 +1,5 @@
 ﻿@page "/status"
+@attribute [Authorize(Roles = "Planner")]
 @inject IRepository repository
 @inject SweetAlertService sweetAlertService
 
