--- a/WaCollaborative/WaCollaborative.Frontend/Pages/DistributionChannels/DistributionChannelsIndex.razor
+++ b/WaCollaborative/WaCollaborative.Frontend/Pages/DistributionChannels/DistributionChannelsIndex.razor
@@ -1,44 +1,58 @@
 ﻿@page "/distributionchannels"
+@attribute [Authorize(Roles = "Planner")]
 @inject IRepository repository
 @inject SweetAlertService sweetAlertService
 
-<h3>Canal de Distribución</h3>
+<div class="card">
+    <div class="card-header">
+        <span>
+            <i class="oi oi-list"></i> Canales de Distribución
+            <a class="btn btn-sm btn-primary float-end" @onclick=@(() => ShowModalAsync())><i class="oi oi-plus"></i> Nuevo Canal de Distribución</a>
+        </span>
+    </div>
+    <div class="card-body">
+        <div class="mb-2" style="display: flex; flex-wrap:wrap; align-items: center;">
+            <div>
+                <input style="width: 400px;" type="text" class="form-control" id="titulo" placeholder="Buscar tipo..." @bind-value="Filter" />
+            </div>
+            <div class="mx-1">
+                <button type="button" class="btn btn-outline-primary" @onclick="ApplyFilterAsync"><i class="oi oi-layers" /> Filtrar</button>
+                <button type="button" class="btn btn-outline-danger" @onclick="CleanFilterAsync"><i class="oi oi-ban" /> Limpiar</button>
+            </div>
+            <GenericList List="distributionChannels">
+                <NoRecords>
+                    <p>Aun no hay Canales de Distribución registrados.</p>
+                </NoRecords>
+                <Body>
+                    <Pagination CurrentPage="currentPage"
+                                TotalPages="totalPages"
+                                SelectedPage="SelectedPageAsync" />
 
-<div class="mb-2">
-    <a class="btn btn-primary btn-sm" href="/distributionchannels/create">Nuevo Canal de Distribución</a>
+                    <table class="table table-striped">
+                        <thead>
+                            <tr>
+                                <th>Canal de Distribución</th>
+                                <th style="width:168px"></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (var distributionChannel in distributionChannels!)
+                            {
+                                <tr>
+                                    <td>@distributionChannel.Name</td>
+                                    <td>
+                                        <a class="btn btn-warning btn-sm" @onclick=@(() => ShowModalAsync(distributionChannel.Id, true))><i class="oi oi-pencil" /> Editar</a>
+                                        <button class="btn btn-danger btn-sm" @onclick=@(() => DeleteAsync(distributionChannel))>Borrar</button>
+                                    </td>
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
+                </Body>
+            </GenericList>
+        </div>
+    </div>
 </div>
-
-<Pagination CurrentPage="currentPage"
-            TotalPages="totalPages"
-            SelectedPage="SelectedPageAsync" />
-
-<GenericList List="distributionChannels">
-    <NoRecords>
-        <p>Aun no hay Canales de Distribución registrados.</p>
-    </NoRecords>
-    <Body>
-        <table class="table table-striped">
-            <thead>
-                <tr>
-                    <th>Canal de Distribución</th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var distributionChannel in distributionChannels!)
-                {
-                    <tr>
-                        <td>@distributionChannel.Name</td>
-                        <td>
-                            <a class="btn btn-warning btn-sm" href="/distributionchannels/edit/@distributionChannel.Id">Editar</a>
-                            <button class="btn btn-danger btn-sm" @onclick=@(() => DeleteAsync(distributionChannel))>Borrar</button>
-                        </td>
-                    </tr>
-                }
-            </tbody>
-        </table>
-    </Body>
-</GenericList>
 
 @code {
 
@@ -46,11 +60,42 @@
     private int currentPage = 1;
     private int totalPages;
 
+    [CascadingParameter]
+    IModalService Modal { get; set; } = default!;
+
+    [Parameter]
+    [SupplyParameterFromQuery]
+    public string Page { get; set; } = string.Empty;
+
+    [Parameter]
+    [SupplyParameterFromQuery]
+    public string Filter { get; set; } = string.Empty;
+
     protected override async Task OnInitializedAsync()
     {
         await LoadAsync();
     }
 
+    private async Task ShowModalAsync(int id = 0, bool isEdit = false)
+    {
+        IModalReference modalReference;
+
+        if (isEdit)
+        {
+            modalReference = Modal.Show<DistributionChannelEdit>(string.Empty, new ModalParameters().Add("DistributionChannelId", id));
+        }
+        else
+        {
+            modalReference = Modal.Show<DistributionChannelCreate>();
+        }
+
+        var result = await modalReference.Result;
+        if (result.Confirmed)
+        {
+            await LoadAsync();
+        }
+    }
+        
     private async Task SelectedPageAsync(int page)
     {
         currentPage = page;
@@ -59,6 +104,11 @@
 
     private async Task LoadAsync(int page = 1)
     {
+        if (!string.IsNullOrWhiteSpace(Page))
+        {
+            page = Convert.ToInt32(Page);
+        }
+
         var ok = await LoadListAsync(page);
         if (ok)
         {
@@ -66,9 +116,41 @@
         }
     }
 
+    private async Task LoadPagesAsync()
+    {
+        var url = string.Empty;
+        if (string.IsNullOrEmpty(Filter))
+        {
+            url = $"api/distributionchannels/totalPages";
+        }
+        else
+        {
+            url = $"api/distributionchannels/totalPages?filter={Filter}";
+        }
+
+        var response = await repository.GetAsync<int>(url);
+        if (response.Error)
+        {
+            var message = await response.GetErrorMessageAsync();
+            await sweetAlertService.FireAsync("Error", message, SweetAlertIcon.Error);
+            return;
+        }
+        totalPages = response.Response;
+    }
+
     private async Task<bool> LoadListAsync(int page)
     {
-        var response = await repository.GetAsync<List<DistributionChannel>>($"api/DistributionChannels?page={page}");
+        var url = string.Empty;
+        if (string.IsNullOrEmpty(Filter))
+        {
+            url = $"api/distributionchannels?page={page}";
+        }
+        else
+        {
+            url = $"api/distributionchannels?page={page}&filter={Filter}";
+        }
+
+        var response = await repository.GetAsync<List<DistributionChannel>>(url);
         if (response.Error)
         {
             var message = await response.GetErrorMessageAsync();
@@ -79,16 +161,17 @@
         return true;
     }
 
-    private async Task LoadPagesAsync()
+    private async Task CleanFilterAsync()
     {
-        var response = await repository.GetAsync<int>("api/DistributionChannels/totalPages");
-        if (response.Error)
-        {
-            var message = await response.GetErrorMessageAsync();
-            await sweetAlertService.FireAsync("Error", message, SweetAlertIcon.Error);
-            return;
-        }
-        totalPages = response.Response;
+        Filter = string.Empty;
+        await ApplyFilterAsync();
+    }
+
+    private async Task ApplyFilterAsync()
+    {
+        int page = 1;
+        await LoadAsync(page);
+        await SelectedPageAsync(page);
     }
 
     private async Task DeleteAsync(DistributionChannel distributionChannel)
@@ -96,7 +179,7 @@
         var result = await sweetAlertService.FireAsync(new SweetAlertOptions
             {
                 Title = "Confirmación",
-                Text = $"¿Esta seguro que quieres borrar el Canal de Distribución: {distributionChannel.Name}?",
+                Text = $"¿Esta seguro que quieres borrar el canal de distirbución: {distributionChannel.Name}?",
                 Icon = SweetAlertIcon.Question,
                 ShowCancelButton = true
             });
@@ -107,7 +190,7 @@
             return;
         }
 
-        var response = await repository.DeleteAsync($"api/DistributionChannels/{distributionChannel.Id}");
+        var response = await repository.DeleteAsync($"api/distributionchannels/{distributionChannel.Id}");
         if (response.Error)
         {
             var message = await response.GetErrorMessageAsync();
