--- a/WaCollaborative/WaCollaborative.Frontend/Pages/MeasurementUnits/MeasurementUnitCreate.razor
+++ b/WaCollaborative/WaCollaborative.Frontend/Pages/MeasurementUnits/MeasurementUnitCreate.razor
@@ -1,4 +1,5 @@
 ﻿@page "/measurementUnits/create"
+@attribute [Authorize(Roles = "Planner")]
 @inject NavigationManager navigationManager
 @inject IRepository repository
 @inject SweetAlertService sweetAlertService
@@ -11,6 +12,9 @@
     private MeasurementUnit measurementUnit = new();
     private MeasurementUnitsForm? measurementUnitsForm;
 
+    [CascadingParameter]
+    BlazoredModalInstance BlazoredModal { get; set; } = default!;
+
     private async Task CreateAsync()
     {
         var response = await repository.PostAsync("/api/measurementUnits", measurementUnit);
@@ -20,7 +24,10 @@
             await sweetAlertService.FireAsync("Error", message, SweetAlertIcon.Error);
             return;
         }
+
+        await BlazoredModal.CloseAsync(ModalResult.Ok());
         Return();
+
         var toast = sweetAlertService.Mixin(new SweetAlertOptions
             {
                 Toast = true,
