--- a/WaCollaborative/WaCollaborative.Frontend/Pages/MeasurementUnits/MeasurementUnitsIndex.razor
+++ b/WaCollaborative/WaCollaborative.Frontend/Pages/MeasurementUnits/MeasurementUnitsIndex.razor
@@ -1,44 +1,58 @@
 ﻿@page "/measurementUnits"
+@attribute [Authorize(Roles = "Planner")]
 @inject IRepository repository
 @inject SweetAlertService sweetAlertService
 
-<h3>Unidades de Medida</h3>
+<div class="card">
+    <div class="card-header">
+        <span>
+            <i class="oi oi-list"></i> Unidades de Medida
+            <a class="btn btn-sm btn-primary float-end" @onclick=@(() => ShowModalAsync())><i class="oi oi-plus"></i> Nueva Unidad de Medida</a>
+        </span>
+    </div>
+    <div class="card-body">
+        <div class="mb-2" style="display: flex; flex-wrap:wrap; align-items: center;">
+            <div>
+                <input style="width: 400px;" type="text" class="form-control" id="titulo" placeholder="Buscar tipo..." @bind-value="Filter" />
+            </div>
+            <div class="mx-1">
+                <button type="button" class="btn btn-outline-primary" @onclick="ApplyFilterAsync"><i class="oi oi-layers" /> Filtrar</button>
+                <button type="button" class="btn btn-outline-danger" @onclick="CleanFilterAsync"><i class="oi oi-ban" /> Limpiar</button>
+            </div>
+            <GenericList List="measurementUnits">
+                <NoRecords>
+                    <p>Aun no hay unidade de medida registradas.</p>
+                </NoRecords>
+                <Body>
+                    <Pagination CurrentPage="currentPage"
+                                TotalPages="totalPages"
+                                SelectedPage="SelectedPageAsync" />
 
-<div class="mb-2">
-    <a class="btn btn-primary btn-sm" href="/measurementUnits/create">Nueva Unidad de Medida</a>
+                    <table class="table table-striped">
+                        <thead>
+                            <tr>
+                                <th>Unidad de Medida</th>
+                                <th style="width:168px"></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (var measurementUnit in measurementUnits!)
+                            {
+                                <tr>
+                                    <td>@measurementUnit.Name</td>
+                                    <td>
+                                        <a class="btn btn-warning btn-sm" @onclick=@(() => ShowModalAsync(measurementUnit.Id, true))><i class="oi oi-pencil" /> Editar</a>
+                                        <button class="btn btn-danger btn-sm" @onclick=@(() => DeleteAsync(measurementUnit))>Borrar</button>
+                                    </td>
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
+                </Body>
+            </GenericList>
+        </div>
+    </div>
 </div>
-
-<Pagination CurrentPage="currentPage"
-            TotalPages="totalPages"
-            SelectedPage="SelectedPageAsync" />
-
-<GenericList List="measurementUnits">
-    <NoRecords>
-        <p>Aun no hay unidade de medida registradas.</p>
-    </NoRecords>
-    <Body>
-        <table class="table table-striped">
-            <thead>
-                <tr>
-                    <th>Unidad de Medida</th>                    
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var measurementUnit in measurementUnits!)
-                {
-                    <tr>
-                        <td>@measurementUnit.Name</td>
-                        <td>
-                            <a class="btn btn-warning btn-sm" href="/measurementUnits/edit/@measurementUnit.Id">Editar</a>
-                            <button class="btn btn-danger btn-sm" @onclick=@(() => DeleteAsync(measurementUnit))>Borrar</button>
-                        </td>
-                    </tr>
-                }
-            </tbody>
-        </table>
-    </Body>
-</GenericList>
 
 @code {
 
@@ -46,9 +60,40 @@
     private int currentPage = 1;
     private int totalPages;
 
+    [CascadingParameter]
+    IModalService Modal { get; set; } = default!;
+
+    [Parameter]
+    [SupplyParameterFromQuery]
+    public string Page { get; set; } = string.Empty;
+
+    [Parameter]
+    [SupplyParameterFromQuery]
+    public string Filter { get; set; } = string.Empty;
+
     protected override async Task OnInitializedAsync()
     {
         await LoadAsync();
+    }
+
+    private async Task ShowModalAsync(int id = 0, bool isEdit = false)
+    {
+        IModalReference modalReference;
+
+        if (isEdit)
+        {
+            modalReference = Modal.Show<MeasurementUnitEdit>(string.Empty, new ModalParameters().Add("MeasurementUnitId", id));
+        }
+        else
+        {
+            modalReference = Modal.Show<MeasurementUnitCreate>();
+        }
+
+        var result = await modalReference.Result;
+        if (result.Confirmed)
+        {
+            await LoadAsync();
+        }
     }
 
     private async Task SelectedPageAsync(int page)
@@ -59,6 +104,11 @@
 
     private async Task LoadAsync(int page = 1)
     {
+        if (!string.IsNullOrWhiteSpace(Page))
+        {
+            page = Convert.ToInt32(Page);
+        }
+
         var ok = await LoadListAsync(page);
         if (ok)
         {
@@ -66,22 +116,19 @@
         }
     }
 
-    private async Task<bool> LoadListAsync(int page)
-    {
-        var response = await repository.GetAsync<List<MeasurementUnit>>($"api/measurementUnits?page={page}");
-        if (response.Error)
-        {
-            var message = await response.GetErrorMessageAsync();
-            await sweetAlertService.FireAsync("Error", message, SweetAlertIcon.Error);
-            return false;
-        }
-        measurementUnits = response.Response;
-        return true;
-    }
-
     private async Task LoadPagesAsync()
     {
-        var response = await repository.GetAsync<int>("api/measurementUnits/totalPages");
+        var url = string.Empty;
+        if (string.IsNullOrEmpty(Filter))
+        {
+            url = $"api/measurementUnits/totalPages";
+        }
+        else
+        {
+            url = $"api/measurementUnits/totalPages?filter={Filter}";
+        }
+
+        var response = await repository.GetAsync<int>(url);
         if (response.Error)
         {
             var message = await response.GetErrorMessageAsync();
@@ -91,25 +138,49 @@
         totalPages = response.Response;
     }
 
-    // private async Task LoadAsync()
-    // {
-    //     var response = await repository.GetAsync<List<MeasurementUnit>>("api/measurementUnits");
-    //     if (response.Error)
-    //     {
-    //         var message = await response.GetErrorMessageAsync();
-    //         await sweetAlertService.FireAsync("Error", message, SweetAlertIcon.Error);
-    //         return;
-    //     }
+    private async Task<bool> LoadListAsync(int page)
+    {
+        var url = string.Empty;
+        if (string.IsNullOrEmpty(Filter))
+        {
+            url = $"api/measurementUnits?page={page}";
+        }
+        else
+        {
+            url = $"api/measurementUnits?page={page}&filter={Filter}";
+        }
 
-    //     measurementUnits = response.Response;
-    // }
+        var response = await repository.GetAsync<List<MeasurementUnit>>(url);
+        if (response.Error)
+        {
+            var message = await response.GetErrorMessageAsync();
+            await sweetAlertService.FireAsync("Error", message, SweetAlertIcon.Error);
+            return false;
+        }
 
+        measurementUnits = response.Response;
+        return true;
+    }
+
+    private async Task CleanFilterAsync()
+    {
+        Filter = string.Empty;
+        await ApplyFilterAsync();
+    }
+
+    private async Task ApplyFilterAsync()
+    {
+        int page = 1;
+        await LoadAsync(page);
+        await SelectedPageAsync(page);
+    }
+    
     private async Task DeleteAsync(MeasurementUnit measurementUnit)
     {
         var result = await sweetAlertService.FireAsync(new SweetAlertOptions
             {
                 Title = "Confirmación",
-                Text = $"¿Esta seguro que quieres borrar la Unidad de Medida : {measurementUnit.Name}?",
+                Text = $"¿Esta seguro que quieres borrar el unidad de medida: {measurementUnit.Name}?",
                 Icon = SweetAlertIcon.Question,
                 ShowCancelButton = true
             });
@@ -139,5 +210,5 @@
             });
         await toast.FireAsync(icon: SweetAlertIcon.Success, message: "Registro borrado con éxito.");
     }
-
+    
 }
