--- a/WaCollaborative/WaCollaborative.Frontend/Pages/Status/StatusIndex.razor
+++ b/WaCollaborative/WaCollaborative.Frontend/Pages/Status/StatusIndex.razor
@@ -3,42 +3,199 @@
 @inject IRepository repository
 @inject SweetAlertService sweetAlertService
 
-<h3>Estados</h3>
+<div class="card">
+    <div class="card-header">
+        <span>
+            <i class="oi oi-globe"></i> Estados
+            <a class="btn btn-sm btn-primary float-end" @onclick=@(() => ShowModalAsync())><i class="oi oi-plus"></i> Adicionar Estado</a>
+        </span>
+    </div>
+    <div class="card-body">
+        <div class="mb-2" style="display: flex; flex-wrap:wrap; align-items: center;">
+            <div>
+                <input style="width: 400px;" type="text" class="form-control" id="titulo" placeholder="Buscar estado..." @bind-value="Filter" />
+            </div>
+            <div class="mx-1">
+                <button type="button" class="btn btn-outline-primary" @onclick="ApplyFilterAsync"><i class="oi oi-layers" /> Filtrar</button>
+                <button type="button" class="btn btn-outline-danger" @onclick="CleanFilterAsync"><i class="oi oi-ban" /> Limpiar</button>
+            </div>
+        </div>
 
-<GenericList List="status">
-    <NoRecords>
-        <p>Aun no hay estados registrados.</p>
-    </NoRecords>
-    <Body>       
-        <table class="table table-striped">
-            <thead>
-                <tr>                   
-                    <th>Estados</th>                    
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var status in status!)
-                {
-                    <tr>
-                        <td>@status.Name</td>                       
-                    </tr>
-                }
-            </tbody>
-        </table>
-    </Body>
-</GenericList>
+        <GenericList List="status">
+            <NoRecords>
+                <p>Aun no hay estados registrados.</p>
+            </NoRecords>
+            <Body>
+                <Pagination CurrentPage="currentPage"
+                            TotalPages="totalPages"
+                            SelectedPage="SelectedPageAsync" />
+
+                <table class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th>Estados</th>
+                            <th style="width:210px">Tipo de Estado</th>
+                            <th style="width:168px"></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var status in status!)
+                        {
+                            <tr>
+                                <td>@status.Name</td>
+                                <td>@status.StatusType!.Name</td>
+                                <td>
+                                    <a class="btn btn-warning btn-sm" @onclick=@(() => ShowModalAsync(status.Id, true))><i class="oi oi-pencil" /> Editar</a>
+                                    @* <button class="btn btn-danger btn-sm" @onclick=@(() => DeleteAsync(status))><i class="oi oi-trash" /> Borrar</button> *@
+                                </td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            </Body>
+        </GenericList>
+    </div>
+</div>
 
 @code {
     private List<Status>? status;
+
+    private int currentPage = 1;
+    private int totalPages;
+
+    [CascadingParameter]
+    IModalService Modal { get; set; } = default!;
+
+    [Parameter]
+    [SupplyParameterFromQuery]
+    public string Page { get; set; } = string.Empty;
+
+    [Parameter]
+    [SupplyParameterFromQuery]
+    public string Filter { get; set; } = string.Empty;
 
     protected override async Task OnInitializedAsync()
     {
         await LoadAsync();
     }
 
-    private async Task LoadAsync()
+    private async Task ShowModalAsync(int id = 0, bool isEdit = false)
     {
-        var response = await repository.GetAsync<List<Status>>("api/status");
+        IModalReference modalReference;
+
+        if (isEdit)
+        {
+            modalReference = Modal.Show<StatusEdit>(string.Empty, new ModalParameters().Add("StatusId", id));
+        }
+        else
+        {
+            modalReference = Modal.Show<StatusCreate>();
+        }
+
+        var result = await modalReference.Result;
+        if (result.Confirmed)
+        {
+            await LoadAsync();
+        }
+    }
+
+    private async Task SelectedPageAsync(int page)
+    {
+        currentPage = page;
+        await LoadAsync(page);
+    }
+
+    private async Task LoadAsync(int page = 1)
+    {
+        if (!string.IsNullOrWhiteSpace(Page))
+        {
+            page = Convert.ToInt32(Page);
+        }
+
+        var ok = await LoadListAsync(page);
+        if (ok)
+        {
+            await LoadPagesAsync();
+        }
+    }
+
+    private async Task<bool> LoadPagesAsync()
+    {
+        var url = string.Empty;
+        if (string.IsNullOrEmpty(Filter))
+        {
+            url = $"api/status/totalPages";
+        }
+        else
+        {
+            url = $"api/status/totalPages?filter={Filter}";
+        }
+
+        var response = await repository.GetAsync<int>(url);
+        if (response.Error)
+        {
+            var message = await response.GetErrorMessageAsync();
+            await sweetAlertService.FireAsync("Error", message, SweetAlertIcon.Error);
+            return false;
+        }
+        totalPages = response.Response;
+        return true;
+    }
+
+    private async Task<bool> LoadListAsync(int page)
+    {
+        var url = string.Empty;
+        if (string.IsNullOrEmpty(Filter))
+        {
+            url = $"api/status?page={page}";
+        }
+        else
+        {
+            url = $"api/status?page={page}&filter={Filter}";
+        }
+
+        var response = await repository.GetAsync<List<Status>>(url);
+        if (response.Error)
+        {
+            var message = await response.GetErrorMessageAsync();
+            await sweetAlertService.FireAsync("Error", message, SweetAlertIcon.Error);
+            return false;
+        }
+
+        status = response.Response;
+        return true;
+    }
+
+    private async Task CleanFilterAsync()
+    {
+        Filter = string.Empty;
+        await ApplyFilterAsync();
+    }
+
+    private async Task ApplyFilterAsync()
+    {
+        int page = 1;
+        await LoadAsync(page);
+        await SelectedPageAsync(page);
+    }
+
+    private async Task DeleteAsync(Status status)
+    {
+        var result = await sweetAlertService.FireAsync(new SweetAlertOptions
+            {
+                Title = "Confirmación",
+                Text = $"¿Esta seguro que quieres borrar el estado: {status.Name}?",
+                Icon = SweetAlertIcon.Question,
+                ShowCancelButton = true
+            });
+
+        var confirm = string.IsNullOrEmpty(result.Value);
+        if (confirm)
+        {
+            return;
+        }
+
+        var response = await repository.DeleteAsync($"api/status/{status.Id}");
         if (response.Error)
         {
             var message = await response.GetErrorMessageAsync();
@@ -46,6 +203,15 @@
             return;
         }
 
-        status = response.Response;
-    }
+        await LoadAsync();
+
+        var toast = sweetAlertService.Mixin(new SweetAlertOptions
+            {
+                Toast = true,
+                Position = SweetAlertPosition.BottomEnd,
+                ShowConfirmButton = true,
+                Timer = 3000
+            });
+        await toast.FireAsync(icon: SweetAlertIcon.Success, message: "Registro borrado con éxito.");
+    }    
 }
