--- a/WaCollaborative/WaCollaborative.Frontend/Pages/DemandTypes/DemandTypeEdit.razor
+++ b/WaCollaborative/WaCollaborative.Frontend/Pages/DemandTypes/DemandTypeEdit.razor
@@ -15,8 +15,8 @@ else
         <div class="card">
             <div class="card-header">
                 <span>
-                    <label> Registrar Nuevo Tipo de Demanda:</label>
-                    <button class="btn btn-sm btn-primary float-end" type="submit"><i class="oi oi-check" /> Registrar</button>
+                    <label> Actualizar Tipo de Demanda:</label>
+                    <button class="btn btn-sm btn-primary float-end" type="submit"><i class="oi oi-check" /> Actualizar</button>
                 </span>
             </div>
             <div class="card-body">
