--- a/WaCollaborative/WaCollaborative.Frontend/Pages/Customers/CustomersIndex.razor
+++ b/WaCollaborative/WaCollaborative.Frontend/Pages/Customers/CustomersIndex.razor
@@ -1,4 +1,4 @@
-﻿@page "/demandtypes"
+﻿@page "/customers"
 @attribute [Authorize(Roles = "Planner")]
 @inject IRepository repository
 @inject SweetAlertService sweetAlertService
@@ -6,14 +6,14 @@
 <div class="card">
     <div class="card-header">
         <span>
-            <i class="oi oi-globe"></i> Tipos de Demandas
-            <a class="btn btn-sm btn-primary float-end" @onclick=@(() => ShowModalAsync())><i class="oi oi-plus"></i> Adicionar Tipo de Demanda</a>
+            <i class="oi oi-list"></i> Clientes
+            <a class="btn btn-sm btn-primary float-end" @onclick=@(() => ShowModalAsync())><i class="oi oi-plus"></i> Adicionar Cliente</a>
         </span>
     </div>
     <div class="card-body">
         <div class="mb-2" style="display: flex; flex-wrap:wrap; align-items: center;">
             <div>
-                <input style="width: 400px;" type="text" class="form-control" id="titulo" placeholder="Buscar estado..." @bind-value="Filter" />
+                <input style="width: 400px;" type="text" class="form-control" id="titulo" placeholder="Buscar cliente..." @bind-value="Filter" />
             </div>
             <div class="mx-1">
                 <button type="button" class="btn btn-outline-primary" @onclick="ApplyFilterAsync"><i class="oi oi-layers" /> Filtrar</button>
@@ -21,9 +21,9 @@
             </div>
         </div>
 
-        <GenericList List="demandTypes">
+        <GenericList List="customers">
             <NoRecords>
-                <p>Aun no hay tipos de demandas registradas.</p>
+                <p>Aun no hay clientes registrados.</p>
             </NoRecords>
             <Body>
                 <Pagination CurrentPage="currentPage"
@@ -33,18 +33,22 @@
                 <table class="table table-striped">
                     <thead>
                         <tr>
-                            <th>Tipo de Demanda</th>                           
+                            <th>Cliente</th>
+                            <th>Código</th>
+                            <th style="width:210px">Canal de Distribución</th>
                             <th style="width:168px"></th>
                         </tr>
                     </thead>
                     <tbody>
-                        @foreach (var demandType in demandTypes!)
+                        @foreach (var customer in customers!)
                         {
                             <tr>
-                                <td>@demandType.Name</td>                                
+                                <td>@customer.Name</td>
+                                <td>@customer.Code</td>
+                                <td>@customer.DistributionChannel!.Name</td>
                                 <td>
-                                    <a class="btn btn-warning btn-sm" @onclick=@(() => ShowModalAsync(demandType.Id, true))><i class="oi oi-pencil" /> Editar</a>
-                                    @* <button class="btn btn-danger btn-sm" @onclick=@(() => DeleteAsync(demandType))><i class="oi oi-trash" /> Borrar</button> *@
+                                    <a class="btn btn-warning btn-sm" @onclick=@(() => ShowModalAsync(customer.Id, true))><i class="oi oi-pencil" /> Editar</a>
+                                    @* <button class="btn btn-danger btn-sm" @onclick=@(() => DeleteAsync(cliente))><i class="oi oi-trash" /> Borrar</button> *@
                                 </td>
                             </tr>
                         }
@@ -56,7 +60,7 @@
 </div>
 
 @code {
-    private List<DemandType>? demandTypes;
+    private List<Customer>? customers;
 
     private int currentPage = 1;
     private int totalPages;
@@ -83,11 +87,11 @@
 
         if (isEdit)
         {
-            modalReference = Modal.Show<DemandTypeEdit>(string.Empty, new ModalParameters().Add("DemandTypeId", id));
+            modalReference = Modal.Show<CustomerEdit>(string.Empty, new ModalParameters().Add("CustomerId", id));
         }
         else
         {
-            modalReference = Modal.Show<DemandTypeCreate>();
+            modalReference = Modal.Show<CustomerCreate>();
         }
 
         var result = await modalReference.Result;
@@ -122,11 +126,11 @@
         var url = string.Empty;
         if (string.IsNullOrEmpty(Filter))
         {
-            url = $"api/demandtypes/totalPages";
+            url = $"api/customers/totalPages";
         }
         else
         {
-            url = $"api/demandtypes/totalPages?filter={Filter}";
+            url = $"api/customers/totalPages?filter={Filter}";
         }
 
         var response = await repository.GetAsync<int>(url);
@@ -145,14 +149,14 @@
         var url = string.Empty;
         if (string.IsNullOrEmpty(Filter))
         {
-            url = $"api/demandtypes?page={page}";
+            url = $"api/customers?page={page}";
         }
         else
         {
-            url = $"api/demandtypes?page={page}&filter={Filter}";
+            url = $"api/customers?page={page}&filter={Filter}";
         }
 
-        var response = await repository.GetAsync<List<DemandType>>(url);
+        var response = await repository.GetAsync<List<Customer>>(url);
         if (response.Error)
         {
             var message = await response.GetErrorMessageAsync();
@@ -160,7 +164,7 @@
             return false;
         }
 
-        demandTypes = response.Response;
+        customers = response.Response;
         return true;
     }
 
@@ -177,12 +181,12 @@
         await SelectedPageAsync(page);
     }
 
-    private async Task DeleteAsync(DemandType demandType)
+    private async Task DeleteAsync(Customer customer)
     {
         var result = await sweetAlertService.FireAsync(new SweetAlertOptions
             {
                 Title = "Confirmación",
-                Text = $"¿Esta seguro que quieres borrar el tipo de demanda: {demandType.Name}?",
+                Text = $"¿Esta seguro que quieres borrar el cliente: {customer.Name}?",
                 Icon = SweetAlertIcon.Question,
                 ShowCancelButton = true
             });
@@ -193,7 +197,7 @@
             return;
         }
 
-        var response = await repository.DeleteAsync($"api/demandtypes/{demandType.Id}");
+        var response = await repository.DeleteAsync($"api/customers/{customer.Id}");
         if (response.Error)
         {
             var message = await response.GetErrorMessageAsync();
