--- a/WaCollaborative/WaCollaborative.Frontend/Shared/NavMenu.razor
+++ b/WaCollaborative/WaCollaborative.Frontend/Shared/NavMenu.razor
@@ -26,6 +26,16 @@
                 </NavLink>
             </div>
             <div class="nav-item px-3">
+                <NavLink class="nav-link" href="/customers">
+                    <span class="oi oi-globe" aria-hidden="true"></span> Clientes
+                </NavLink>
+            </div>
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="/products">
+                    <span class="oi oi-beaker" aria-hidden="true"></span> Productos
+                </NavLink>
+            </div>
+            <div class="nav-item px-3">
                 <NavLink class="nav-link" href="/measurementUnits">
                     <span class="oi oi-beaker" aria-hidden="true"></span> Unidades de Medida
                 </NavLink>
