--- a/WaCollaborative/WaCollaborative.Frontend/Shared/NavMenu.razor
+++ b/WaCollaborative/WaCollaborative.Frontend/Shared/NavMenu.razor
@@ -19,6 +19,18 @@
                 <span class="oi oi-globe" aria-hidden="true"></span> Colaboración
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/collaborationTest">
+                <span class="oi oi-globe" aria-hidden="true"></span> Colaboración Test
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/CollaborativeDemand/collaborationDetail">
+                <span class="oi oi-globe" aria-hidden="true"></span> Detail
+            </NavLink>
+        </div>
+
         <AuthorizeView Roles="Planner">
             <div class="nav-item px-3">
                 <NavLink class="nav-link" href="/countries">
